--- a/Reto-Tec-Salud/Reto-Tec-Salud/MedicBot/GenerativeAI-Info.plist
+++ b/Reto-Tec-Salud/Reto-Tec-Salud/MedicBot/GenerativeAI-Info.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCoIjKvOT9Huveku7BhRwTeqjjpeEAjQXM</string>
+	<string></string>
 </dict>
 </plist>
