base code for anchor pacement done

--- a/Reto-Tec-Salud/Reto-Tec-Salud/Info.plist
+++ b/Reto-Tec-Salud/Reto-Tec-Salud/Info.plist
@@ -8,6 +8,8 @@
 		<string>_TecMed-ML-Comm._udp</string>
 		<string>_http._tcp.</string>
 	</array>
+	<key>NSWorldSensingUsageDescription</key>
+	<string>Needed for AR Mapping</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationPreferredDefaultSceneSessionRole</key>
