--- a/API/Pipfile
+++ b/API/Pipfile
@@ -7,6 +7,11 @@ name = "pypi"
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+supabase = "*"
+fastapi = "*"
+pip = "*"
+install = "*"
+uvicorn = {extras = ["standard"], version = "*"}
 
 [dev-packages]
 
