--- a/Reto-Tec-Salud/Reto-Tec-Salud/Info.plist
+++ b/Reto-Tec-Salud/Reto-Tec-Salud/Info.plist
@@ -2,12 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_TecMed-ML-Comm._tcp</string>
 		<string>_TecMed-ML-Comm._udp</string>
 		<string>_http._tcp.</string>
 	</array>
+	<key>NSHandsTrackingUsageDescription</key>
+	<string>Hands tracked</string>
+	<key>NSWorldSensingUsageDescription</key>
+	<string></string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationPreferredDefaultSceneSessionRole</key>
